# TempusOnePs

./: .gitignore  .gitmodules  LICENSE  README.md  TempusOnePs.drawio  TempusOnePs.txt  pyproject.toml  requirements.txt  run-cron.py  run.py
config/: config.sample.json
core/: base_service.py  event_bus.py  forfun.py  log_queue.py  scheduler.py  service_loader.py  utils.py
core/service/: base_execution.py  base_service.py  base_signal.py
docs/: TempusOnePs.drawio  how_to_create_new_module.md  validate_config.md
lib/: .gitignore  stockHistory.py  telegram_api.py  telegram_api.sample.json
modules/default/signals/: custom.py
modules/examples/: requirements.txt
modules/examples/backtest/: ema_cross.py
modules/examples/config/: config.json
modules/examples/data/: replay_ohcl_csv.py  replay_ohcl_dnse.py  vn30f1m_dnse.py
modules/examples/execution/: simple_worker.py
modules/examples/log/: print_msg.py  storage_file.py  to_mysql.py
modules/examples/signals/: ema_cross.py
scripts/: move_libs_to_venv.sh  pull_updated_code.sh
services/: base_service.py
services/data/: base_data.py  example_data_service.py
services/data/examples/: random_ohcl.py  stream_csv.py  vn30f1m_dnse.py
services/execution/: base_execution.py  example_execution_service.py
services/execution/examples/: just_log.py  simple_worker.py
services/log/: example_log_service.py
services/log/examples/: print_msg.py  storage_file.py
services/signals/: base_signal.py  macd_signal_plugin.py  rsi_signal_plugin.py
tools/: move_libs_to_venv.sh  print_project_tree.py  validate_config.py
(+2 files in other folders)
